--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: CodeQL Security Analysis
+name: Dependency Security Check
 
 on:
   push:
@@ -10,32 +10,31 @@ on:
     - cron: '0 0 * * 1'
 
 jobs:
-  analyze:
-    name: Analyze Code
+  security:
+    name: Check Dependencies
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['javascript', 'typescript']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          languages: ${{ matrix.language }}
+          node-version: '18'
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          category: "/language:${{matrix.language}}"
+          version: 8
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Audit dependencies for vulnerabilities
+        run: pnpm audit --audit-level=moderate
+        continue-on-error: true
+
+      - name: Check for outdated packages
+        run: pnpm outdated
+        continue-on-error: true
