--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [main, develop]
 
 jobs:
-  lint-and-typecheck:
-    name: Lint and Type Check
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
 
     steps:
@@ -44,13 +44,10 @@ jobs:
       - name: Run linter
         run: pnpm lint
 
-      - name: Type check
-        run: pnpm tsc --noEmit
-
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: lint-and-typecheck
+    needs: lint
 
     steps:
       - name: Checkout code
