--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/dom-speech-recognition": "^0.0.4",
+    "@vercel/analytics": "^1.5.0",
     "@xenova/transformers": "^2.17.1",
     "ai": "^3.1.3",
     "class-variance-authority": "^0.7.0",
