--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          standalone: true
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: pnpm install
 
       - name: Run linter
-        run: npm run lint
+        run: pnpm lint
 
   # dear contributers :) Uncomment for tests
   # test:
